--- a/frontend/package.json
+++ b/frontend/package.json
@@ -127,6 +127,7 @@
     "es6-promise": "^3.1.2",
     "es6-shim": "0.35.0",
     "ng2-bootstrap": "^1.0.16",
+    "ng2-file-upload": "^1.0.3",
     "ng2-material": "^0.3.8",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
