--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,16 @@ services:
       - "8000:8000"
     volumes:
       - .:/code
-    command: ./run_backend.sh 
+    command: ./run_backend.sh
+    environment:
+      - RABBIT=rabbitmq:5672
   worker:
     build: backend
     volumes:
       - .:/code
     command: ./run_worker.sh
     environment:
-        - RABIT_PORT_5672_TCP=rabbitmq:5672
+        - RABBIT=rabbitmq:5672
   rabbitmq:
     image: tutum/rabbitmq
     environment:
